# devflow-recorder

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
gnome-extension/devflow-recorder@local/: extension.js  metadata.json  stylesheet.css
src/: activity.test.ts  activity.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tools/: install-gnome-extension.sh  screenshot_ocr_test.py
